Commit of final working project, still needs documentation

--- a/crossbounce2Start-master/crossbounce2Start-master.csproj
+++ b/crossbounce2Start-master/crossbounce2Start-master.csproj
@@ -241,8 +241,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\BulletControl.cs" />
+    <Compile Include="Assets\ChangeBouncyness.cs" />
     <Compile Include="Assets\CrossbowUserControl.cs" />
-    <Compile Include="Assets\NewBehaviourScript.cs" />
     <Compile Include="Assets\ObjectOptionScript.cs" />
     <Compile Include="Assets\TargetController.cs" />
   </ItemGroup>
