Added documentation and fixed 2 button switching from 2D to 3D view

--- a/crossbounce2Start-master/crossbounce2Start-master.csproj
+++ b/crossbounce2Start-master/crossbounce2Start-master.csproj
@@ -241,7 +241,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\BulletControl.cs" />
-    <Compile Include="Assets\ChangeBouncyness.cs" />
+    <Compile Include="Assets\ChangeBounce.cs" />
     <Compile Include="Assets\CrossbowUserControl.cs" />
     <Compile Include="Assets\ObjectOptionScript.cs" />
     <Compile Include="Assets\TargetController.cs" />
